feat: add performance benchmarking system
Established baseline performance metrics:
- 3.35 episodes/sec (100 episodes 2048 DQN)
- 390 steps/sec
- 296.80ms per training step
- 1023 MB memory usage

Added:
- Benchmark script with detailed metrics
- Performance tracking in PERFORMANCE.md
- JSONL log for historical tracking
- Optimization roadmap

Next: Optimize tensor operations to reach 5-10 eps/sec

--- a/apps/game-2048/package.json
+++ b/apps/game-2048/package.json
@@ -5,7 +5,8 @@
   "description": "2048 game for RL benchmarking",
   "scripts": {
     "play": "bun run src/play.ts",
-    "train": "bun run src/train.ts"
+    "train": "bun run src/train.ts",
+    "benchmark": "bun run src/benchmark.ts"
   },
   "dependencies": {
     "@neuronline/tensor": "workspace:*",
