--- a/packages/webgpu/tsconfig.json
+++ b/packages/webgpu/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
+    "noEmit": false,
     "types": ["@webgpu/types"]
   },
   "include": ["src/**/*"]
