chore: prepare packages for npm publishing
- Add repository, homepage, bugs fields to package.json
- Add publishConfig with public access
- Create comprehensive README for @neuronline/tensor
- Document API, features, performance, examples

Ready for npm publish with:
  npm publish --access public

--- a/packages/tensor/package.json
+++ b/packages/tensor/package.json
@@ -24,5 +24,17 @@
     "pure-functional"
   ],
   "author": "SylphxAI",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sylphxai/neuronline.git",
+    "directory": "packages/tensor"
+  },
+  "homepage": "https://github.com/sylphxai/neuronline#readme",
+  "bugs": {
+    "url": "https://github.com/sylphxai/neuronline/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
