chore: add npm metadata to all packages
Add repository, homepage, bugs, and publishConfig to all packages
for npm publishing readiness.

- nn, optim, functional, wasm: @neuronline scope
- data, webgpu: @neuronline scope
- core, predictors: @sylphx scope

All packages configured for public access on npm.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,6 +22,18 @@
   "keywords": ["online-learning", "machine-learning", "neural-network", "incremental-learning"],
   "author": "SylphxAI",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sylphxai/neuronline.git",
+    "directory": "packages/core"
+  },
+  "homepage": "https://github.com/sylphxai/neuronline#readme",
+  "bugs": {
+    "url": "https://github.com/sylphxai/neuronline/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.7.2"
