--- a/packages/optim/package.json
+++ b/packages/optim/package.json
@@ -15,5 +15,25 @@
   },
   "devDependencies": {
     "typescript": "^5.7.3"
+  },
+  "keywords": [
+    "optimizer",
+    "sgd",
+    "adam",
+    "pure-functions"
+  ],
+  "author": "SylphxAI",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sylphxai/neuronline.git",
+    "directory": "packages/optim"
+  },
+  "homepage": "https://github.com/sylphxai/neuronline#readme",
+  "bugs": {
+    "url": "https://github.com/sylphxai/neuronline/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
