--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -14,5 +14,24 @@
   },
   "devDependencies": {
     "typescript": "^5.7.3"
+  },
+  "keywords": [
+    "data-loader",
+    "dataset",
+    "machine-learning"
+  ],
+  "author": "SylphxAI",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sylphxai/neuronline.git",
+    "directory": "packages/data"
+  },
+  "homepage": "https://github.com/sylphxai/neuronline#readme",
+  "bugs": {
+    "url": "https://github.com/sylphxai/neuronline/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
