--- a/packages/webgpu/package.json
+++ b/packages/webgpu/package.json
@@ -13,5 +13,24 @@
   "devDependencies": {
     "@webgpu/types": "^0.1.51",
     "typescript": "^5.7.3"
+  },
+  "keywords": [
+    "webgpu",
+    "gpu-acceleration",
+    "tensor-operations"
+  ],
+  "author": "SylphxAI",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sylphxai/neuronline.git",
+    "directory": "packages/webgpu"
+  },
+  "homepage": "https://github.com/sylphxai/neuronline#readme",
+  "bugs": {
+    "url": "https://github.com/sylphxai/neuronline/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
