perf(bench): add WASM vs TypeScript acceleration benchmark
- Comprehensive micro-benchmarks for key operations
- Compare TypeScript vs WASM performance
- Test multiple array sizes (100, 1K, 10K elements)
- Matrix multiplication benchmarks (32x32, 64x64, 128x128)

Key findings:
- WASM has overhead for small arrays (<1K elements)
- WASM excels at matrix multiplication (2-2.7x faster)
- Element-wise ops show mixed results due to call overhead
- Recommendation: Use WASM for matmul only, TS for element-wise

Results:
- Small arrays: TypeScript faster (call overhead)
- Medium arrays (1K): WASM 1.2-1.6x faster (add, relu)
- Large arrays (10K): Mixed results
- Matrix multiply: WASM 2-2.7x faster (most important!)

Next: Integrate WASM matmul into @neuronline/tensor

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@sylphx/neuronline-core": "workspace:*",
-    "@sylphx/neuronline-predictors": "workspace:*"
+    "@sylphx/neuronline-predictors": "workspace:*",
+    "@neuronline/wasm": "workspace:*",
+    "@neuronline/webgpu": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
