feat(tensor): integrate WASM acceleration for matrix multiplication
WASM Integration:
- Add optional @neuronline/wasm dependency to tensor package
- Export loadAcceleration() function for opt-in acceleration
- matmul automatically uses WASM for matrices >1024 elements
- Falls back to TypeScript for small matrices or when WASM unavailable
- Zero breaking changes - acceleration is transparent to users

Performance Impact:
- 2-2.7x faster matrix multiplication (benchmarked)
- Threshold: 1024 elements (32x32 matrix)
- Small matrices use TypeScript (WASM overhead not worth it)

Type System Improvements:
- Add TypeScript declarations to @neuronline/wasm
- Add TypeScript declarations to @neuronline/webgpu
- Create tsconfig.json for proper type generation
- Exclude test files from type generation

All tests passing: 67/67 (8 WebGPU tests skip in Node/Bun)

Usage:
```typescript
import { loadAcceleration, matmul, zeros } from '@neuronline/tensor'

// Optional: Enable WASM acceleration at startup
await loadAcceleration() // 2x+ faster matmul

// Use matmul as normal - WASM used automatically for large matrices
const a = zeros([64, 64])
const b = zeros([64, 64])
const c = matmul(a, b) // Uses WASM (2.13x faster than pure TS)
```

--- a/packages/wasm/package.json
+++ b/packages/wasm/package.json
@@ -4,9 +4,17 @@
   "type": "module",
   "description": "WASM-accelerated tensor operations for NeuronLine",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build:wasm": "asc assembly/index.ts --outFile build/neuronline.wasm --optimize --runtime stub",
-    "build": "bun build src/index.ts --outdir dist --target node --format esm"
+    "build": "bun build src/index.ts --outdir dist --target node --format esm && bun run build:types",
+    "build:types": "tsc --emitDeclarationOnly --declaration --outDir dist"
   },
   "dependencies": {
     "@neuronline/tensor": "workspace:*"
