--- a/packages/tensor/package.json
+++ b/packages/tensor/package.json
@@ -36,5 +36,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "optionalDependencies": {
+    "@neuronline/wasm": "workspace:*"
   }
 }
