test(demo): add WASM integration verification test
- Test loadAcceleration() function
- Verify small matrices use TypeScript
- Verify large matrices use WASM
- Verify correctness of results with known values
- All 4 tests passing

Results:
- WASM loaded successfully
- Small matrix (256 elements): TypeScript
- Medium matrix (4096 elements): WASM
- Large matrix (16384 elements): WASM
- Values match expected output

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -12,7 +12,8 @@
     "@sylphx/neuronline-core": "workspace:*",
     "@sylphx/neuronline-predictors": "workspace:*",
     "@neuronline/wasm": "workspace:*",
-    "@neuronline/webgpu": "workspace:*"
+    "@neuronline/webgpu": "workspace:*",
+    "@neuronline/tensor": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
