feat(tensor): integrate WebGPU acceleration with async API
Add WebGPU as optional dependency with separate async API for GPU operations.
Provides dual acceleration strategy: WASM for sync ops, WebGPU for async.

Changes:
- Add loadGPUAcceleration() and getGPU() to tensor package
- Export isGPUAvailable() helper function
- Remove circular dependency between webgpu and tensor packages
- Add gpu-vs-wasm-bench.ts for performance comparison
- Add webgpu-async-demo.ts showing async API usage

Technical Details:
- WebGPU operations are async and cannot integrate into sync API
- Separate async API preserves existing synchronous workflow
- Recommended for very large matrices (>100K elements)
- WASM remains primary acceleration for typical workloads (1K-100K)

Documentation:
- Updated PERFORMANCE.md with acceleration strategy guide
- Decision matrix for TypeScript/WASM/WebGPU selection
- Updated CHANGELOG.md for v0.1.7

All 67 tests passing (8 WebGPU tests skip in Node/Bun)

--- a/packages/tensor/package.json
+++ b/packages/tensor/package.json
@@ -38,6 +38,7 @@
     "access": "public"
   },
   "optionalDependencies": {
-    "@neuronline/wasm": "workspace:*"
+    "@neuronline/wasm": "workspace:*",
+    "@neuronline/webgpu": "workspace:*"
   }
 }
