feat: rebrand to Axon (@sylphx scope)
- Renamed all packages from @neuronline/* to @sylphx/*
- Updated repository URLs to github.com/SylphxAI/Axon
- Updated README with new branding and performance metrics
- All packages now at version 0.1.0
- Updated imports across all source files
- Reflects 155x performance improvement over baseline

Package renames:
- @neuronline/tensor → @sylphx/tensor
- @neuronline/nn → @sylphx/nn
- @neuronline/functional → @sylphx/functional
- @neuronline/optim → @sylphx/optim
- @neuronline/data → @sylphx/data
- @neuronline/wasm → @sylphx/wasm
- @neuronline/webgpu → @sylphx/webgpu
- @sylphx/neuronline-core → @sylphx/core
- @sylphx/neuronline-predictors → @sylphx/predictors

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "@sylphx/neuronline-demo",
+  "name": "axon-demo",
   "version": "0.1.0",
   "private": true,
-  "description": "Demo application for NeuronLine",
+  "description": "Demo application for Axon",
   "type": "module",
   "scripts": {
     "dev": "bun run index.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@sylphx/neuronline-core": "workspace:*",
-    "@sylphx/neuronline-predictors": "workspace:*",
-    "@neuronline/wasm": "workspace:*",
-    "@neuronline/webgpu": "workspace:*",
-    "@neuronline/tensor": "workspace:*",
-    "@neuronline/functional": "workspace:*",
-    "@neuronline/nn": "workspace:*",
-    "@neuronline/optim": "workspace:*"
+    "@sylphx/core": "workspace:*",
+    "@sylphx/predictors": "workspace:*",
+    "@sylphx/wasm": "workspace:*",
+    "@sylphx/webgpu": "workspace:*",
+    "@sylphx/tensor": "workspace:*",
+    "@sylphx/functional": "workspace:*",
+    "@sylphx/nn": "workspace:*",
+    "@sylphx/optim": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
