--- a/packages/nn/package.json
+++ b/packages/nn/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@neuronline/nn",
-  "version": "3.0.0",
+  "name": "@sylphx/nn",
+  "version": "0.1.0",
   "type": "module",
-  "description": "Pure functional neural network layers for NeuronLine",
+  "description": "Pure functional neural network layers (Linear, Conv2D, LSTM, GRU, BatchNorm, Dropout)",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -17,8 +17,8 @@
     "test": "bun test"
   },
   "dependencies": {
-    "@neuronline/tensor": "workspace:*",
-    "@neuronline/functional": "workspace:*"
+    "@sylphx/tensor": "workspace:*",
+    "@sylphx/functional": "workspace:*"
   },
   "keywords": [
     "neural-network",
@@ -29,12 +29,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sylphxai/neuronline.git",
+    "url": "https://github.com/SylphxAI/Axon.git",
     "directory": "packages/nn"
   },
-  "homepage": "https://github.com/sylphxai/neuronline#readme",
+  "homepage": "https://github.com/SylphxAI/Axon#readme",
   "bugs": {
-    "url": "https://github.com/sylphxai/neuronline/issues"
+    "url": "https://github.com/SylphxAI/Axon/issues"
   },
   "publishConfig": {
     "access": "public"
