--- a/packages/predictors/package.json
+++ b/packages/predictors/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@sylphx/neuronline-predictors",
+  "name": "@sylphx/predictors",
   "version": "0.1.0",
-  "description": "Prediction modules for NeuronLine",
+  "description": "Prediction modules (click, sequence, recommender, A/B test)",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -40,18 +40,18 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sylphxai/neuronline.git",
+    "url": "https://github.com/SylphxAI/Axon.git",
     "directory": "packages/predictors"
   },
-  "homepage": "https://github.com/sylphxai/neuronline#readme",
+  "homepage": "https://github.com/SylphxAI/Axon#readme",
   "bugs": {
-    "url": "https://github.com/sylphxai/neuronline/issues"
+    "url": "https://github.com/SylphxAI/Axon/issues"
   },
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@sylphx/neuronline-core": "workspace:*"
+    "@sylphx/core": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
