--- a/packages/webgpu/package.json
+++ b/packages/webgpu/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@neuronline/webgpu",
+  "name": "@sylphx/webgpu",
   "version": "0.1.0",
   "type": "module",
-  "description": "WebGPU-accelerated tensor operations for NeuronLine",
+  "description": "WebGPU-accelerated tensor operations",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -28,12 +28,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sylphxai/neuronline.git",
+    "url": "https://github.com/SylphxAI/Axon.git",
     "directory": "packages/webgpu"
   },
-  "homepage": "https://github.com/sylphxai/neuronline#readme",
+  "homepage": "https://github.com/SylphxAI/Axon#readme",
   "bugs": {
-    "url": "https://github.com/sylphxai/neuronline/issues"
+    "url": "https://github.com/SylphxAI/Axon/issues"
   },
   "publishConfig": {
     "access": "public"
