feat(train): add train() function for multiple epochs
- Added train() function to run training for N epochs
- Added onEpoch callback for progress tracking and early stopping
- Returns all losses for analysis
- Added demo: apps/demo/xor-train.ts

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -16,7 +16,8 @@
     "@sylphx/tensor": "workspace:*",
     "@sylphx/functional": "workspace:*",
     "@sylphx/nn": "workspace:*",
-    "@sylphx/optim": "workspace:*"
+    "@sylphx/optim": "workspace:*",
+    "@sylphx/train": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
